--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.apache.tika:tika-core:2.9.0'
     implementation 'org.apache.tika:tika-parsers-standard-package:2.9.0'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
+    implementation 'commons-io:commons-io:2.11.0'
 }
 
 tasks.named('test') {
