--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,10 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
+springBoot {
+    mainClass = 'org.backend.JavaccProjectApplication'
+}
+
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
